[gd_scene load_steps=4 format=2]

[ext_resource path="res://MenusAndUI/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://MenusAndUI/Menus/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://MenusAndUI/Fonts/slkscr-28.tres" type="DynamicFont" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 46.0
margin_top = 21.0
margin_right = 274.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 228.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 3 )
text = "Game paused!"
align = 1

[node name="Gap" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 228.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 10 )

[node name="ResumeGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 53.0
margin_top = 55.0
margin_right = 174.0
margin_bottom = 80.0
rect_min_size = Vector2( 121, 0 )
size_flags_horizontal = 4
text = "Resume Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 53.0
margin_top = 84.0
margin_right = 174.0
margin_bottom = 109.0
rect_min_size = Vector2( 121, 0 )
size_flags_horizontal = 4
text = "Settings"

[node name="QuitToStartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 53.0
margin_top = 113.0
margin_right = 174.0
margin_bottom = 138.0
rect_min_size = Vector2( 121, 0 )
size_flags_horizontal = 4
text = "Quit to start"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeGameButton" to="." method="_on_ResumeGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitToStartButton" to="." method="_on_QuitToStartButton_pressed"]
